--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "config": "^3.3.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "http-errors": "^2.0.0",
     "https": "^1.0.0",
+    "nanoid": "^4.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.7.0",
