--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "config": "^3.3.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-jwt": "^8.4.1",
     "http-errors": "^2.0.0",
     "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.0",
     "nanoid": "^4.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
