feat(queue): distribution happens in a queue
Signed-off-by: Evan Prodromou <git@evanprodromou.name>

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.7.0",
     "sqlite3": "^5.1.6",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "standard": "^17.1.0"
