--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.1",
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
