fix: one line for running tests in test action
Signed-off-by: Evan Prodromou <git@evanprodromou.name>

--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -22,8 +22,7 @@ jobs:
       run: npm install
 
     - name: Run tests
-      run: |
-        npm run test
+      run: npm run test
 
   pushToGHCR:
     needs: runTests
