--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -43,7 +43,7 @@ jobs:
         VERSION: ${{ github.sha }}
         IMAGE: ghcr.io/evanp/onepage.pub
       run: |
-        docker build -t $IMAGE:$VERSION app
+        docker build -t $IMAGE:$VERSION .
         docker tag $IMAGE:$VERSION $IMAGE:latest
 
     - name: Push Docker image
