fix: name of repository

--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Push Docker image
       env:
         VERSION: ${{ github.sha }}
-        IMAGE: ghcr.io/open-earth-foundation/citycatalyst
+        IMAGE: ghcr.io/evanp/onepage.pub
       run: |
         docker push $IMAGE:$VERSION
         docker push $IMAGE:latest
