--- a/.github/workflows/docker-tag.yml
+++ b/.github/workflows/docker-tag.yml
@@ -26,6 +26,9 @@ jobs:
     pushToGHCR:
         needs: runTests
         runs-on: ubuntu-latest
+        permissions:
+          contents: read
+          packages: write
         steps:
 
         - uses: actions/checkout@v3
