--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ghcr.io/evanp/onepage.pub:latest
           cache-from: type=registry,ref=ghcr.io/evanp/onepage.pub:latest
           cache-to: type=inline
