--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "http-errors": "^2.0.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
