--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bootstrap": "^5.3.2",
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-jwt": "^8.4.1",
