--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ OPP_HOSTNAME="localhost"
 OPP_PORT="65380"
 OPP_KEY="localhost.key"
 OPP_CERT="localhost.crt"
-OPP_LOG_LEVEL="warn"
+OPP_LOG_LEVEL="info"
 OPP_SESSION_SECRET="insecure-session-secret"
 OPP_INVITE_CODE=
 OPP_BLOCK_LIST=
