--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "node index.mjs",
-    "test": "node --test --test-reporter=spec",
+    "test": "node --test --test-reporter=spec ./blocklist.mjs",
     "test:only": "node --test --test-only --test-reporter=spec",
     "ver": "echo $npm_package_version"
   },
