--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@popperjs/core": "^2.11.8",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "chalk": "^5.3.0",
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
