--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ OPP_CERT="localhost.crt"
 OPP_LOG_LEVEL="warn"
 OPP_SESSION_SECRET="insecure-session-secret"
 OPP_INVITE_CODE=
-OPP_BLOCK_LIST=
+OPP_BLOCK_LIST="blocklist.csv"
 OPP_RATE_LIMIT="100"
