--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bootstrap": "^5.3.3",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-jwt": "^8.5.1",
