--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.8.0",
     "sqlite3": "^5.1.7",
+    "statuses": "^2.0.2",
     "supertest": "^7.1.4",
     "winston": "^3.17.0"
   },
